--- a/playbook.yaml
+++ b/playbook.yaml
@@ -4,9 +4,12 @@
   become: yes
 
   tasks:
-    - name: Set hostname to master
+    - name: Set hostname 
       hostname:
-        name: master
+       name: "{{ item }}"
+      loop:
+        - master
+        - worker1 
 
     - name: Configure IP address and netplan
       copy:
@@ -15,15 +18,19 @@
             version: 2
             renderer: networkd
             ethernets:
-              enp0s3:
+              ens18:
                 addresses:
-                  - 192.168.0.173/24
+                  - {{ item }}/24
                 nameservers:
                   addresses: [8.8.8.8, 8.8.4.4]
                 routes:
                   - to: default
-                    via: 192.168.0.1
+                    via: 192.168.8.2
         dest: /etc/netplan/00-installer-config.yaml
+      with_items:
+        - 192.168.8.235
+        - 192.168.8.236
+      #when: "'{{ inventory_hostname }}' in groups['node1']" # If in nentory file we have groups then we ad it here     
 
     - name: Deactivate swap
       mount:
@@ -32,6 +39,7 @@
         state: absent
       ignore_errors: yes
       when: ansible_swaptotal_mb > 0
+
 
     - name: Ensure /etc/resolv.conf has nameserver 8.8.8.8
       copy:
@@ -61,6 +69,11 @@
 
     - name: Apply sysctl settings
       command: sysctl --system
+
+    - name: Update APT cache
+      apt:
+        update_cache: yes
+      when: ansible_os_family == 'Debian'    
 
     - name: Install containerd
       apt:
