--- a/playbook.yaml
+++ b/playbook.yaml
@@ -4,12 +4,12 @@
   become: yes
 
   tasks:
-    - name: Set hostname 
+    - name: Set hostname   
+      #ansible.builtin.debug:         
+      #var: hostvars[inventory_hostname]|json_query('[character_type,spell1]')
       hostname:
-       name: "{{ item }}"
-      loop:
-        - master
-        - worker1 
+        #var: hostvars[inventory_hostname]|json_query('[character_type,spell1]')
+        name: "{{ hostvars[inventory_hostname]|json_query('[character_type,spell1][1]') }}"
 
     - name: Configure IP address and netplan
       copy:
@@ -28,9 +28,15 @@
                     via: 192.168.8.2
         dest: /etc/netplan/00-installer-config.yaml
       with_items:
+        - 192.168.8.234
         - 192.168.8.235
-        - 192.168.8.236
       #when: "'{{ inventory_hostname }}' in groups['node1']" # If in nentory file we have groups then we ad it here     
+
+    - name: Debug ansible_swaptotal_mb
+      debug:
+        var: ansible_swaptotal_mb
+
+
 
     - name: Deactivate swap
       mount:
